--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -163,8 +163,9 @@
 		padding: 80px 60px 30px 60px;
 	}
 
-	.destacado-logo-ancho {
+	.destacado-logo-medidas {
 		max-width: 250px;
+		max-height: 200px;
 	}
 
 	.destacado-logo-alto {
@@ -186,8 +187,9 @@
 			padding: 40px 30px 15px 30px;
 		}
 
-		.destacado-logo-ancho {
+		.destacado-logo-medidas {
 			max-width: 150px;
+			max-height: 120px;
 		}
 
 		.destacado-logo-alto {
@@ -289,7 +291,7 @@
 								display: flex; align-items: end;" class="destacado-hueco">
 
 							<div class="destacado-logo-alto" style="width: 100%; height: 100%; display: flex; align-items: center;">
-								<img src="@juegoSeleccionado.Imagenes.Logo" class="destacado-logo-ancho" alt="@juegoSeleccionado.Nombre">
+								<img src="@juegoSeleccionado.Imagenes.Logo" class="destacado-logo-medidas" alt="@juegoSeleccionado.Nombre">
 							</div>
 
 							<div style="display: flex; align-items: center; margin-bottom: 30px; color: var(--colorTexto);">
