--- a/pepeizqs deals web/Pages/Componentes/Secciones/Minimos.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Minimos.razor
@@ -251,8 +251,33 @@
 						@Herramientas.Idiomas.CogerCadena(idioma, "String11", "HistoricalLows")
 					</div>
 				</div>
-			}			
 
+				<hr style="margin-top: 30px;">
+			}
+
+			<div style="margin-top: 30px;">
+				<div style="padding-bottom: 15px;">
+					@Herramientas.Idiomas.CogerCadena(idioma, "String12", "HistoricalLows")
+				</div>
+		
+				<div style="display: flex; align-items: center;">
+					<input type="range" min="1" max="91" value="@minimoDescuento" step="5" @onchange="@(e => CambiarMinimoDescuento(e))" class="deslizador">
+
+					<label style="padding-left: 30px; min-width: 65px;">@minimoDescuento%</label>
+				</div>
+			</div>
+
+			<div style="margin-top: 30px;">
+				<div style="padding-bottom: 15px;">
+					@Herramientas.Idiomas.CogerCadena(idioma, "String13", "HistoricalLows")
+				</div>
+
+				<div style="display: flex; align-items: center;">
+					<input type="range" min="5" max="90" value="@maximoPrecio" step="1" @onchange="@(e => CambiarMaximoPrecio(e))" class="deslizador">
+
+					<label style="padding-left: 30px; min-width: 65px;">@maximoPrecio€</label>
+				</div>
+			</div>
 		</div>
 	</div>
 }
@@ -322,6 +347,38 @@
 			else
 			{
 				estadoOcultarJuegosUsuario = null;
+			}
+
+			if (usuario.HistoricalLowsOption2 == null)
+			{
+				minimoDescuento = 1;
+			}
+			else
+			{
+				if (usuario.HistoricalLowsOption2 == 0 || usuario.HistoricalLowsOption2 == null)
+				{
+					minimoDescuento = 1;
+				}
+				else if (usuario.HistoricalLowsOption2 > 0)
+				{
+					minimoDescuento = usuario.HistoricalLowsOption2;
+				}
+			}
+
+			if (usuario.HistoricalLowsOption3 == null)
+			{
+				maximoPrecio = 90;
+			}
+			else
+			{
+				if (usuario.HistoricalLowsOption3 == 0 || usuario.HistoricalLowsOption3 == null)
+				{
+					maximoPrecio = 90;
+				}
+				else if (usuario.HistoricalLowsOption3 > 0)
+				{
+					maximoPrecio = usuario.HistoricalLowsOption3;
+				}
 			}
 
 			#endregion
@@ -636,7 +693,24 @@
 				}
 			}
 
-			if (buscador == true && ocultable == false)
+			bool minimoDescuento2 = false;
+
+			if (juego.PrecioMinimosHistoricos != null)
+			{
+				if (juego.PrecioMinimosHistoricos[0].Descuento >= minimoDescuento)
+				{
+					minimoDescuento2 = true;
+				}
+			}
+
+			bool maximoPrecio2 = false;
+
+			if (juego.PrecioMinimosHistoricos[0].Precio <= maximoPrecio)
+			{
+				maximoPrecio2 = true;
+			}
+
+			if (buscador == true && ocultable == false && minimoDescuento2 == true && maximoPrecio2 == true)
 			{
 				juegosFiltrados.Add(juego);
 			}
@@ -725,6 +799,43 @@
 
 			ElegirOrdenamiento();
 		}
+	}
+
+	private int? minimoDescuento = 1;
+
+	private async void CambiarMinimoDescuento(ChangeEventArgs e)
+	{
+		minimoDescuento = int.Parse(e.Value.ToString());
+
+		if (minimoDescuento != 1)
+		{
+			minimoDescuento = minimoDescuento - 1;
+		}
+
+		if (usuario != null)
+		{
+			usuario.HistoricalLowsOption2 = minimoDescuento;
+
+			await UserManager.UpdateAsync(usuario);
+		}
+
+		ElegirOrdenamiento();
+	}
+
+	private decimal? maximoPrecio = 90;
+
+	private async void CambiarMaximoPrecio(ChangeEventArgs e)
+	{
+		maximoPrecio = decimal.Parse(e.Value.ToString());
+
+		if (usuario != null)
+		{
+			usuario.HistoricalLowsOption3 = maximoPrecio;
+
+			await UserManager.UpdateAsync(usuario);
+		}
+
+		ElegirOrdenamiento();
 	}
 
 	#endregion
