--- a/pepeizqs deals web/wwwroot/css/resto.css
+++ b/pepeizqs deals web/wwwroot/css/resto.css
@@ -785,4 +785,39 @@ select {
     100% {
         transform: rotate(360deg);
     }
-} 
+}
+
+.deslizador {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 20px;
+    background-color: var(--bs-gray-800);
+    outline: none;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+    border-radius: 60px;
+}
+
+    .deslizador:hover {
+        background-color: var(--bs-gray-700);
+    }
+
+    .deslizador::-webkit-slider-thumb {
+        position: relative;
+        -webkit-appearance: none;
+        appearance: none;
+        width: 19px;
+        height: 19px;
+        background: var(--bs-gray-500);
+        cursor: pointer;
+        border-radius: 57px;
+    }
+
+    .deslizador::-moz-range-thumb {
+        position: relative;
+        width: 19px;
+        height: 19px;
+        background: var(--bs-gray-500);
+        cursor: pointer;
+        border-radius: 57px;
+    }
