--- a/pepeizqs deals web/Pages/Componentes/Secciones/Deseados.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Deseados.razor
@@ -229,7 +229,7 @@
 					<div style="display: flex; align-items: center;">
 						<input type="range" min="1" max="91" value="@minimoDescuento" step="5" @onchange="@(e => CambiarMinimoDescuento(e))" class="deslizador">
 
-						<label style="padding-left: 30px; min-width: 65px;">@minimoDescuento%</label>
+						<label style="padding-left: 30px; min-width: 65px; text-align: center;">@minimoDescuento%</label>
 					</div>
 				</div>
 
@@ -241,7 +241,7 @@
 					<div style="display: flex; align-items: center;">
 						<input type="range" min="5" max="90" value="@maximoPrecio" step="1" @onchange="@(e => CambiarMaximoPrecio(e))" class="deslizador">
 
-						<label style="padding-left: 30px; min-width: 65px;">@maximoPrecio€</label>
+						<label style="padding-left: 30px; min-width: 65px; text-align: center;">@maximoPrecio€</label>
 					</div>
 				</div>
 			</div>
